--- a/src/app/views/upload-receipt/upload-receipt.component.html
+++ b/src/app/views/upload-receipt/upload-receipt.component.html
@@ -1,1 +1,24 @@
-<p>upload-receipt works!</p>
+<div class="upload-receipt">
+  <h2>Por favor, adjunte comprobante de pago</h2>
+  <form (ngSubmit)="onSubmit()">
+    <input
+      type="file"
+      (change)="onFileSelected($event)"
+      accept=".pdf,image/*"
+    />
+    <button type="submit">Subir</button>
+  </form>
+  <div *ngIf="fileUrl" class="file-preview">
+    <ng-container *ngIf="isImage; else pdfTemplate">
+      <img [src]="fileUrl" alt="Vista previa de la imagen" />
+    </ng-container>
+    <ng-template #pdfTemplate>
+      <embed
+        [src]="fileUrl"
+        type="application/pdf"
+        width="100%"
+        height="600px"
+      />
+    </ng-template>
+  </div>
+</div>
