--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-upload-receipt></app-upload-receipt>
+<!-- <app-upload-receipt></app-upload-receipt>
+<app-registration-form> </app-registration-form> -->
+<router-outlet></router-outlet>
