semi complete login form and agreggate css styles in nav and login

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,14 @@
 <ul>
     <li>
-        <a [routerLink]="[ '/login' ]" routerLinkActive="active">Inicio</a>
+        <a [routerLink]="[ '/registration-aspirantes' ]" routerLinkActive="active">Inicio</a>
+    </li>
+    <li>
+        <a [routerLink]="[ '/' ]" routerLinkActive="active">Page1</a>
+    </li>
+    <li>
+        <a [routerLink]="[ '/' ]" routerLinkActive="active">Page3</a>
+    </li>
+    <li>
+        <a class="navlogin" [routerLink]="[ '/login' ]" routerLinkActive="active">Iniciar Sesión</a>
     </li>
 </ul>
