apply styles in any pages

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,12 +1,13 @@
+<!-- nav.component.html -->
 <ul>
     <li>
-        <a [routerLink]="[ '/registration-aspirantes' ]" routerLinkActive="active">Inicio</a>
+        <a [routerLink]="[ '/registro-aspirantes' ]" routerLinkActive="active">Inicio</a>
     </li>
     <li>
-        <a [routerLink]="[ '/' ]" routerLinkActive="active">Page1</a>
+        <a [routerLink]="[ '/login' ]" routerLinkActive="active">Page1</a>
     </li>
     <li>
-        <a [routerLink]="[ '/' ]" routerLinkActive="active">Page3</a>
+        <a [routerLink]="[ '/login' ]" routerLinkActive="active">Page3</a>
     </li>
     <li>
         <a class="navlogin" [routerLink]="[ '/login' ]" routerLinkActive="active">Iniciar Sesión</a>
