--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- <app-upload-receipt></app-upload-receipt>
 <app-registration-form> </app-registration-form> -->
+<app-nav></app-nav>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
