--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,55 +1,46 @@
-<div id="header">
-    <app-nav class="nav-bar" id="navbar"></app-nav>
-</div>
 
 <div class="container" id="home">
     <div class="login-left">
-        <div class="login-header">
-            <h1>Welcome</h1>
-            <p>Please login to continue......</p>
+      <div class="login-header">
+        <h1>Bienvenido</h1>
+        <p>Por favor inicie sesión para continuar...</p>
+      </div>
+      <form class="login-form" autocomplete="off">
+        <div class="login-content">
+          <div class="form-item">
+            <label for="email">Ingrese su usuario</label>
+            <input type="text" id="email" placeholder="username">
+          </div>
+          <div class="form-item">
+            <label for="password">Ingrese su contraseña</label>
+            <input type="password" id="password" placeholder="contraseña" class="pass-key">
+            <img src="eye-close.png" id="eyeicon" class="password-toggle">
+          </div>
+          <div class="form-item">
+            <div class="checkbox">
+              <input type="checkbox" id="rememberMeCheckbox">
+              <label for="rememberMeCheckbox" class="checkboxlabel">Recuérdame</label>
+            </div>
+          </div>
+          <div class="remember-forgot">
+            <a [routerLink]="['/login']" routerLinkActive="active">¿Contraseña Olvidada?</a>
+          </div>
+          <div class="bg-grey">
+            <div class="sing-up">¿Aún no tienes cuenta? <a [routerLink]="['/login']" routerLinkActive="active" class="text-link" id="sign-up">Sign up</a></div>
+          </div>
+          <button type="submit">Iniciar Sesión</button>
         </div>
-        <form action="" class="login-form" autocomplete="off">
-            <div class="login-content">
-                <div class="form-item">
-                    <label for="email">Enter Email</label>
-                    <input type="email" name="" id="" placeholder="example@email.com">
-                </div>
-                <div class="form-item">
-                    <label for="password">Enter Password</label>
-                    <label for="text"></label>
-                    <input type="password" name="" id="password" placeholder="Enter your Password" required class="pass-key">
-                    <img src="eye-close.png" id="eyeicon" class="password-toggle">
-                    <!-- <span class="show">Show</span> -->
-                </div>
-                <div class="form-item">
-                    <div class="checkbox">
-                        <input type="checkbox" name="" id="rememberMeCheckbox" checked>
-                        <label for="rememberMeCheckbox" class="checkboxlabel">Remember Me</label>
-                    </div>
-                </div>
-                <div class="remember-forgot">
-                    <a href="#">Forgot password?</a>
-                </div>
-
-                <div class="bg-grey">
-                    <div class="sing-up">Don't have an account? <a href=""class="text-link" id="sign-up" >Sign up</a></div>
-                    <!--<a href="#register" class="link-register">Sign Up</a>-->
-                </div>
-
-                <button type="submit">LogIn</button>
-            </div>
-            <div class="login-footer">
-                <a href="">
-                    <img width="30" src="https://img.icons8.com/color/512/facebook-new.png" alt="facebook">Facebook
-                </a>
-                <a href="">
-                    <img width="30" src="https://img.icons8.com/fluency/512/google-logo.png" alt="google">Google
-                </a>
-            </div>
-        </form>
+        <div class="login-footer">
+          <a href="https://www.facebook.com">
+            <img width="30" src="https://img.icons8.com/color/512/facebook-new.png" alt="facebook">Facebook
+          </a>
+          <a href="https://www.google.com">
+            <img width="30" src="https://img.icons8.com/fluency/512/google-logo.png" alt="google">Google
+          </a>
+        </div>
+      </form>
     </div>
     <div class="login-right">
-        <img src="images/Data Arranging_Two Color.svg" alt="">
+      <img src="images/Data Arranging_Two Color.svg" alt="">
     </div>
-</div>
-<app-footer></app-footer>
+  </div>
