--- a/src/app/views/registration-form/registration-form.component.html
+++ b/src/app/views/registration-form/registration-form.component.html
@@ -1,23 +1,26 @@
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
   <div class="col-md-8">
-    <form (ngSubmit)="save($event)" [formGroup]="form" class="p-4 border rounded bg-light">
+    <form (ngSubmit)="save($event)" [formGroup]="form" class="p-4 border rounded bg-light shadow">
       <h1 class="titulo text-center mb-4">Formulario de Inscripción a Fuerzas Armadas</h1>
 
-      <div class="form-group">
-        <label>Cédula*:</label>
-        <input type="text" class="form-control" formControlName="cedula">
+      <!-- Cedula -->
+      <div class="form-group position-relative mb-3">
+        <label>Cédula<span class="text-danger">*</span>:</label>
+        <input type="text" class="form-control" formControlName="cedula" (blur)="form.get('cedula')?.markAsTouched()"
+          [ngClass]="{'is-invalid': form.get('cedula')?.invalid && form.get('cedula')?.touched, 'is-valid': form.get('cedula')?.valid && form.get('cedula')?.touched}">
         <small *ngIf="form.get('cedula')?.hasError('required') && form.get('cedula')?.touched" class="text-danger">
           El campo es obligatorio
         </small>
-        <small *ngIf="form.get('cedula')?.hasError('cedulaInvalida') && form.get('cedula')?.touched"
-          class="text-danger">
+        <small *ngIf="form.get('cedula')?.hasError('cedulaInvalida') && form.get('cedula')?.touched" class="text-danger">
           Cédula inválida
         </small>
       </div>
 
-      <div class="form-group">
-        <label>Nombre Completo*:</label>
-        <input type="text" class="form-control" formControlName="nombreCompleto">
+      <!-- Nombre Completo -->
+      <div class="form-group position-relative mb-3">
+        <label>Nombre Completo<span class="text-danger">*</span>:</label>
+        <input type="text" class="form-control" formControlName="nombreCompleto" (blur)="form.get('nombreCompleto')?.markAsTouched()"
+          [ngClass]="{'is-invalid': form.get('nombreCompleto')?.invalid && form.get('nombreCompleto')?.touched, 'is-valid': form.get('nombreCompleto')?.valid && form.get('nombreCompleto')?.touched}">
         <small *ngIf="form.get('nombreCompleto')?.hasError('required') && form.get('nombreCompleto')?.touched"
           class="text-danger">
           El campo es obligatorio
@@ -32,11 +35,12 @@
         </small>
       </div>
 
-      <div class="form-group">
-        <label>Fecha de Nacimiento*:</label>
-        <input type="date" class="form-control" formControlName="fechaNacimiento">
-        <small *ngIf="form.get('fechaNacimiento')?.hasError('required') && form.get('fechaNacimiento')?.touched"
-          class="text-danger">
+      <!-- Fecha de Nacimiento -->
+      <div class="form-group position-relative mb-3">
+        <label>Fecha de Nacimiento<span class="text-danger">*</span>:</label>
+        <input type="date" class="form-control" formControlName="fechaNacimiento" (blur)="form.get('fechaNacimiento')?.markAsTouched()"
+          [ngClass]="{'is-invalid': form.get('fechaNacimiento')?.invalid && form.get('fechaNacimiento')?.touched, 'is-valid': form.get('fechaNacimiento')?.valid && form.get('fechaNacimiento')?.touched}">
+        <small *ngIf="form.get('fechaNacimiento')?.hasError('required') && form.get('fechaNacimiento')?.touched" class="text-danger">
           El campo es obligatorio
         </small>
         <small *ngIf="form.get('fechaNacimiento')?.hasError('edadMinima') && form.get('fechaNacimiento')?.touched"
@@ -45,56 +49,55 @@
         </small>
       </div>
 
-      <div class="form-group">
-        <label>Género*:</label>
-        <div class="form-check">
-          <input type="radio" class="form-check-input" id="generoMasculino" formControlName="genero" value="masculino">
-          <label class="form-check-label" for="generoMasculino">Masculino</label>
-        </div>
-        <div class="form-check">
-          <input type="radio" class="form-check-input" id="generoFemenino" formControlName="genero" value="femenino">
-          <label class="form-check-label" for="generoFemenino">Femenino</label>
-        </div>
-        <div class="form-check">
-          <input type="radio" class="form-check-input" id="generoOtro" formControlName="genero" value="otro">
-          <label class="form-check-label" for="generoOtro">Otro</label>
-        </div>
-        <small *ngIf="form.get('genero')?.hasError('required') && form.get('genero')?.touched" class="text-danger">
-          El campo es obligatorio
-        </small>
-      </div>
+      <!-- Provincia -->
+      <div class="form-group position-relative mb-3">
+        <label>Provincia<span class="text-danger">*</span>:</label>
+        <select class="form-control" formControlName="provincia" (blur)="form.get('provincia')?.markAsTouched()"
+        [ngClass]="{'is-invalid': form.get('provincia')?.invalid && form.get('provincia')?.touched, 'is-valid': form.get('provincia')?.valid && form.get('provincia')?.touched}">
+        <option value="">Seleccione una provincia</option>
+        <option *ngFor="let provincia of provincias" [value]="provincia">{{provincia}}</option>
+      </select>
+      <small *ngIf="form.get('provincia')?.hasError('required') && form.get('provincia')?.touched" class="text-danger">
+        El campo es obligatorio
+      </small>
+    </div>
 
-      <div class="form-group">
-        <label>Provincia*:</label>
-        <select class="form-control" formControlName="provincia">
-          <option value="">Seleccione una provincia</option>
-          <option *ngFor="let provincia of provincias" [value]="provincia">{{provincia}}</option>
-        </select>
-        <small *ngIf="form.get('provincia')?.hasError('required') && form.get('provincia')?.touched"
-          class="text-danger">
-          El campo es obligatorio
-        </small>
+    <!-- Genero via radio -->
+    <div class="form-group position-relative mb-3">
+      <label>Género<span class="text-danger">*</span>:</label>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" id="masculino" formControlName="genero" value="Masculino" (blur)="form.get('genero')?.markAsTouched()">
+        <label class="form-check-label" for="masculino">Masculino</label>
       </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" id="femenino" formControlName="genero" value="Femenino" (blur)="form.get('genero')?.markAsTouched()">
+        <label class="form-check-label" for="femenino">Femenino</label>
+      </div>
+      <small *ngIf="form.get('genero')?.hasError('required') && form.get('genero')?.touched" class="text-danger">
+        El campo es obligatorio
+      </small>
+    </div>
 
-      <div class="form-group">
-        <label>Tipo de Comando*:</label>
-        <select class="form-control" formControlName="tipoComando">
-          <option value="">Seleccione un comando</option>
-          <option value="Policia Nacional">Policía Nacional</option>
-          <option value="Policia de Transito">Policía de Tránsito</option>
-          <option value="Bombero">Bombero</option>
-          <option value="Militar">Militar</option>
-          <option value="Marin">Marin</option>
-        </select>
-        <small *ngIf="form.get('tipoComando')?.hasError('required') && form.get('tipoComando')?.touched"
-          class="text-danger">
-          El campo es obligatorio
-        </small>
-      </div>
+    <!-- Tipo de Comando -->
+    <div class="form-group position-relative mb-3">
+      <label>Tipo de Comando<span class="text-danger">*</span>:</label>
+      <select class="form-control" formControlName="tipoComando" (blur)="form.get('tipoComando')?.markAsTouched()"
+        [ngClass]="{'is-invalid': form.get('tipoComando')?.invalid && form.get('tipoComando')?.touched, 'is-valid': form.get('tipoComando')?.valid && form.get('tipoComando')?.touched}">
+        <option value="">Seleccione un comando</option>
+        <option value="Policia Nacional">Policía Nacional</option>
+        <option value="Policia de Transito">Policía de Tránsito</option>
+        <option value="Bombero">Bombero</option>
+        <option value="Militar">Militar</option>
+        <option value="Marin">Marin</option>
+      </select>
+      <small *ngIf="form.get('tipoComando')?.hasError('required') && form.get('tipoComando')?.touched" class="text-danger">
+        El campo es obligatorio
+      </small>
+    </div>
 
-      <div class="form-group mt-3 text-center">
-        <button class="btn btn-primary" [disabled]="form.invalid" type="submit">ENVIAR</button>
-      </div>
-    </form>
-  </div>
+    <div class="form-group mt-3 text-center">
+      <button class="btn btn-primary" [disabled]="form.invalid" type="submit">ENVIAR</button>
+    </div>
+  </form>
+</div>
 </div>
