add content in verify-data-denied component

--- a/src/app/emails/verify-data/verify-data.component.scss
+++ b/src/app/emails/verify-data/verify-data.component.scss
@@ -18,5 +18,6 @@ $email-link-hover-color: #000;
         color: $email-link-hover-color;
         background-color: $email-link-color;
         padding: 2px 5px;
+        cursor: pointer;
     }
 }
