--- a/src/app/emails/verify-data-denied/verify-data-denied.component.html
+++ b/src/app/emails/verify-data-denied/verify-data-denied.component.html
@@ -1,1 +1,7 @@
-<p>verify-data-denied works!</p>
+<div class="email-container">
+    <h2>¡Tus datos han sido rechazados</h2>
+    <p>Lamentablemente, tu información esta inconsistente o no cumple con nuestros requisitos.</p>
+    <p>Por favor, revisa los detalles y vuelve a enviar tus datos utilizando el siguiente enlace:</p>
+    <a href="{{linkRegistro}}" class="email-link"Formulario de Registro></a>
+    <p>Saludos, <br>Equipo de Soporte y Desarrollo</p>
+</div>
