Add data in end-process and styles

--- a/src/app/emails/end-process/end-process.component.html
+++ b/src/app/emails/end-process/end-process.component.html
@@ -1,1 +1,8 @@
-<p>end-process works!</p>
+<div class="email-container">
+    <h2>Pago confirmado</h2>
+    <p>Nos complace informarte que el recibo de tu pago ha sido validado y confirmado satisfactoriamente.</p>
+    <p>Tu registro ha sido completado exitosamente.</p>
+    <p>Te damos la bienvenida al curso para ingreso a los diferentes comandos.</p>
+    <p>Gracias por tu colaboración.</p>
+    <p>Saludos, <br>Equipo de Soporte y Desarrollo</p>
+</div>
