Update verify-data-denied 3

--- a/src/app/emails/end-process-denied/end-process-denied.component.scss
+++ b/src/app/emails/end-process-denied/end-process-denied.component.scss
@@ -1,7 +1,7 @@
 $email-bg-color: #000;
 $email-text-color: #ffd700;
 $email-link-color: #ffd700;
-$email-link-hover-color: 000;
+$email-link-hover-color: #000;
 
 .email-container{
     background-color: $email-bg-color;
