--- a/src/app/emails/end-process-denied/end-process-denied.component.html
+++ b/src/app/emails/end-process-denied/end-process-denied.component.html
@@ -3,6 +3,6 @@
     <p>Lamentablemente, tu comprobante de pago no ha sido aceptado.</p>
     <p>El comprobante no es el correcto, no se enfocado o no esta en el formato adecuado.</p>
     <p>Por favor, sube un nuevo comprobante, verificando que sea el correcto y este en el formato adecuado, utilizando el siguiente enlace:</p>
-    <a href="{{linkSubida}}">Subir nuevo comprobante</a>
+    <a href="{{linkSubida}}" class="email-link">Subir nuevo comprobante</a>
     <p>Saludos, <br>Equipo de Soporte y Desarrollo</p>
 </div>
