add login by Cesar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer>
+  <div class="footer-content">
+      <p>&copy; 2024 Comando ESPE. Todos los derechos reservados</p>
+  </div>
+</footer>
