cambios hechos en el footer, nav-bar, page-not-found y login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- <app-upload-receipt></app-upload-receipt>
 <app-registration-form> </app-registration-form> -->
-<app-nav></app-nav>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-nav *ngIf="showHeader"></app-nav>
+<main>
+    <router-outlet></router-outlet>
+</main>
+<app-footer *ngIf="showHeader"></app-footer>
