--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,61 +1,81 @@
+$bg-color: #1c1c1c;
+$text-color: #ffd700;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 header {
-    width: 100%;
-    height: 80px;
-    background: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 100px;
-    padding-top: 2px;
+    //width: 100%;
+    //height: 80px;
+    background-color: $bg-color;
+    color: lighten($text-color, 20%);
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    //display: flex;
+    //align-items: center;
+    //justify-content: space-between;
+    padding: 1rem 0;
+    //padding-top: 2px;
 
-    .logo a {
-        font-size: 30px;
-        font-weight: bold;
-        color: black;
-    }
 
-    .hamburger {
-        display: none;
-        cursor: pointer;
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 1rem;
 
-        .line {
-            width: 30px;
-            height: 3px;
-            background: black;
-            margin: 6px 0;
-            cursor: pointer;
+        .logo a {
+            text-decoration: none;
+            font-size: 1.5rem;
+            font-family: "Helvetica Neue", Arial, sans-serif;
+            font-weight: bold;
+            color: lighten($text-color, 20%);
+
+            &:hover{
+                color: #f8f9fa;
+            }
         }
-    }
 
-    .nav-bar {
+        .nav-link {
+            list-style: none;
+            display: flex;
+
+            li {
+                margin-left: 1rem;
+
+            }
+        }
+
         ul {
             display: flex;
 
             li {
                 a {
+                    text-decoration: none;
                     display: block;
-                    color: black;
-                    font-size: 20px;
+                    color: lighten($text-color, 20%);
+                    font-size: 1rem;
+                    font-family: "Helvetica Neue", Arial, sans-serif;
                     padding: 10px 25px;
                     border-radius: 50px;
                     transition: .2s;
 
                     &:hover {
-                        color: black;
-                        background: #eee;
+                        color: $bg-color;
+                        background: lighten($text-color, 20%);
                     }
 
                     &.active {
-                        background-color: #eee;
+                        background-color: lighten($bg-color, 20%);
                     }
 
                     &.navlogin {
-                        color: #eee;
-                        background-color: #11101b;
-                        transition: .5s;
+                        color: #f8f9fa;
+                        background-color: black;
+                        transition: .2s;
 
                         &:hover {
-                            background-color: #eee;
+                            background-color: #f8f9fa;
                             color: black;
                         }
                     }
@@ -69,12 +89,7 @@ header {
     }
 
     @media (max-width: 900px) {
-        .hamburger {
-            display: block;
-            z-index: 99999;
-        }
-
-        .nav-bar {
+        .navbar {
             height: 0;
             position: absolute;
             top: 90px;
@@ -96,9 +111,10 @@ header {
                 li {
                     a {
                         display: block;
-                        color: black;
+                        color: $bg-color;
                         margin-top: 40px;
                         font-size: 25px;
+                        font-family: "Helvetica Neue", Arial, sans-serif;
                         font-weight: 900;
                         margin-bottom: 12px;
                     }
