--- a/src/app/views/admin/login/login.component.html
+++ b/src/app/views/admin/login/login.component.html
@@ -34,5 +34,9 @@
         <button type="submit" [disabled]="loginForm.invalid">Ingresar</button>
       </div>
     </form>
+    <div class="links">
+      <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+      <a href="/register">Crear una cuenta</a>
+    </div>
   </div>
 </div>
